spotify login integrated

--- a/src/login/login.html
+++ b/src/login/login.html
@@ -9,5 +9,8 @@
 </head>
 <body>
     <h1 class="text-3xl font-bold underline">Welcome to Login</h1>
+    <button id="login-to-spotify" class="bg-black text-white">login</button>
+    <script type="module" src="login.js"></script>
 </body>
+
 </html>
