--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -7,6 +7,6 @@
     <title>Spotify Player</title>
 </head>
 <body>
-    <h1>welcome to login</h1>
+    <h1>welcome to Dashboard</h1>
 </body>
 </html>
