--- a/src/login/login.html
+++ b/src/login/login.html
@@ -7,9 +7,13 @@
     <title>Spotify Player</title>
     <link rel="stylesheet" href="../style.css">
 </head>
-<body>
-    <h1 class="text-3xl font-bold underline">Welcome to Login</h1>
-    <button id="login-to-spotify" class="bg-black text-white">login</button>
+<body class="h-screen bg-green">
+    <main class="w-full h-full flex justify-center items-center">
+        <section id="login-to-spotify" class="flex items-center flex-col gap-8">
+            <img src="./Spotify_Logo_RGB_Black.png" alt="spotify image" class="h-[20vh]">
+            <input type="button" value="login to spotify" class="bg-dark text-white w-64 h-12 rounded-md hover:cursor-pointer">
+        </section>
+    </main>
     <script type="module" src="login.js"></script>
 </body>
 
