--- a/src/login/login.html
+++ b/src/login/login.html
@@ -11,7 +11,7 @@
     <main class="w-full h-full flex justify-center items-center">
         <section id="login-to-spotify" class="flex items-center flex-col gap-8">
             <img src="./Spotify_Logo_RGB_Black.png" alt="spotify image" class="h-[20vh]">
-            <input type="button" value="login to spotify" class="bg-dark text-white w-64 h-12 rounded-md hover:cursor-pointer">
+            <input type="button" value="login to spotify" class="bg-black text-white w-64 h-12 rounded-md hover:cursor-pointer">
         </section>
     </main>
     <script type="module" src="login.js"></script>
