--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -35,7 +35,21 @@
                     </ul>
                 </nav>             
             </header>
-            <section>content</section>
+            <article class="p-4 ">
+                <h1 class="text-2xl">Featured</h1>
+                <section class="featured-songs grid grid-cols-auto-fill-cards gap-4" id="featured-playlist-items">
+                    <!-- <section  class="rounded p-4 border-solid border-2 ">
+                        <img src="https://i.scdn.co/image/ab67706f000000030b376c5227ccdccdfdc25ead" alt="" />
+                        <h2 class="text-sm">Name</h2>
+                        <h3 class="text-xs">Description</h3>
+                    </section>
+                    <section>
+                        <img src="https://i.scdn.co/image/ab67706f000000030b376c5227ccdccdfdc25ead" alt="" />
+                        <h2>Name</h2>
+                        <h3>Description</h3>
+                    </section> -->
+                </section>
+            </article>
         </section>
         <footer class="now-playing">now playing</footer>
     </main>
