--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Player</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
     <script src="./dashboard.js" type="module"></script>
 </head>
 <body class="h-screen bg-black text-primary">
@@ -24,10 +25,9 @@
                             <h3 id="display-name">
                                 
                             </h3>
-                            <i><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 ">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 13.5L12 21m0 0l-7.5-7.5M12 21V3" />
-                              </svg>
-                              </i>             
+                            <span class="material-symbols-outlined">
+                                arrow_drop_down
+                                </span>           
                         </section>
                     </button>
                     <ul id="profile-menu" class=" hidden absolute top-12 right-0 w-[200px] rounded-md bg-light-black p-1">
@@ -44,14 +44,50 @@
                         <li class="justify-self-center">#</li>
                         <li>Title</li>
                         <li>Album</li>
-                        <li>🕝</li>
+                        <li><span class="material-symbols-outlined">
+                            schedule
+                            </span></li>
                     </ul>
                 </header>
                 <section class="px-8" id="tracks">
                 </section>
             </section>
         </article>
-        <footer class="now-playing">now playing</footer>
+        <footer class="now-playing border-t-light-black bg-black-secondary px-4 text-secondary">
+            <section class="grid grid-cols-[1fr_2fr_1fr] gap-4">
+                <section class="grid grid-cols-[auto_1fr] place-content-center gap-4">
+                    <img class="h-12 w-12" id="now-playing-image" src="" alt="title">
+                    <section class="flex flex-col justify-center">
+                        <h2 id="now-playing-song"  class="text-sm font-semibold text-primary">song title</h2>
+                        <p id="now-playing-artists" class="text-xs">song artist</p>
+                    </section>                    
+                </section>
+                <section id="audio-control">
+                    <!-- section for audio control -->
+                    <section class="flex items-center justify-center hover:text-primary">
+                        <button id="prev"><span class="material-symbols-outlined">
+                            skip_previous
+                            </span></button>
+                        <button id="play"><span class="material-symbols-outlined">
+                            play_circle
+                            </span></button>
+                        <button id="next "><span class="material-symbols-outlined">
+                            skip_next
+                            </span></button>
+
+                    </section>
+                    <section class="w-full flex items-center justify-center p-1">
+                        <span id="song-duration-completed">0:00 </span>
+                        <section id="progress" class="h-2 w-full cursor-pointer rounded-3xl bg-secondary"></section>
+                        <span id="total-song-duration">0:00</span>
+                    </section>
+                </section>
+                <section>
+                    section for volume control
+                </section>
+            </section>
+
+        </footer>
     </main>
 </body>
 </html>
